--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,7 @@ form > div {
     clear: both;
     overflow: hidden;
     padding: 1px;
-    margin: 0 0 10px 0;
+    margin: 0 0 0px 0;
 }
 form > div > fieldset > div > div {
     margin: 0 0 5px 0;
@@ -106,9 +106,20 @@ input[type=submit]{
 .bottom{
     padding-top: 300px;
 }
+.user{
+    width: 60px;
+    height: 60px;
+    margin: 0 auto;
+    border-top-left-radius: 999px;
+    border-top-right-radius: 999px;
+    border-bottom-right-radius: 999px;
+    border-bottom-left-radius: 999px;
+    border-radius: 999px;
+    border-radius: 50%;
+}
 @media (max-width: 600px) {
     form > div {
-        margin: 0 0 15px 0;
+        margin: 0 0 0px 0;
     }
     form > div > label,
     legend {
