--- a/views/renmai.ejs
+++ b/views/renmai.ejs
@@ -15,8 +15,10 @@
 			<input type="hidden" name="host" value="<%= user %>">
 	    <header>
 		    <h2><%= title %></h2>   <a href="/user/list?user=<%= user %>">列表</a>
-		    <div>This form breaks at 600px and goes from a left-label form to a top-label form. At above 1200px, the labels align right.</div>
-	    </header>
+		    <div style="margin: 0 auto; text-align: center"><img src="images/pic_hd.jpg" class="user"></div>
+		    <p>你好，我是魅族笔戈团队的程煜雯 ，
+			    想通过这个页面记录联系你的方式，便于未来合作或新品的邀请，期待更多深入的交流。</p>
+		    </header>
 	    <div>
 		    <label class="desc" id="title1" for="Field1">姓  名</label>
 		    <div>
