--- a/views/userlist.ejs
+++ b/views/userlist.ejs
@@ -123,7 +123,7 @@
   <body>
 
 	    <header>
-		    <h2><%= host %> 的人脉列表</h2>  <a href="/user/add?">添加一个</a>
+		    <h2><%= host %> 的人脉列表</h2>  <a href="/user/add?user=<%= host %>">添加一个</a>
 	    </header>
 	    <ul>
 		    <table>
